implement JWT Protected route
