# cmd/api/main.go
@@ -2,7 +2,7 @@ package main
 
 import (
 	"log"
-	_ "rest_api_gin/docs" // 👈 ensure Swagger docs are registered
+	_ "rest_api_gin/docs" // ensure Swagger docs are registered
 )
 
 // @title           GO & Gin API
@@ -10,6 +10,11 @@ import (
 // @description     User Management System Sample App.
 // @host      localhost:8080
 // @BasePath  /api
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Provide your access token in the Authorization header using the Bearer scheme.
 
 func main() {
 	app, err := NewApp()
