# docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/assign-roles": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Assign multiple roles to a specific user by body",
                 "consumes": [
                     "application/json"
@@ -57,6 +62,11 @@
         },
         "/deletebyid_role/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a single role by ID",
                 "consumes": [
                     "application/json"
@@ -81,7 +91,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest_api_gin_internal_dtos.GetSingleRoleResponse"
+                            "$ref": "#/definitions/rest_api_gin_internal_dtos.SuccessResponse"
                         }
                     },
                     "500": {
@@ -153,6 +163,11 @@
         },
         "/getbyid_role/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a single role by ID",
                 "consumes": [
                     "application/json"
@@ -191,6 +206,11 @@
         },
         "/getbyid_user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a single user by ID",
                 "consumes": [
                     "application/json"
@@ -216,6 +236,58 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/rest_api_gin_internal_dtos.GetSingleUserResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest_api_gin_internal_dtos.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "Authenticate user and return JWT Token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "Login Request",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/rest_api_gin_internal_dtos.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest_api_gin_internal_dtos.TokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/rest_api_gin_internal_dtos.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/rest_api_gin_internal_dtos.ErrorResponse"
                         }
                     },
                     "500": {
@@ -321,6 +393,11 @@
         },
         "/update_role": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update role body",
                 "consumes": [
                     "application/json"
@@ -367,6 +444,11 @@
         },
         "/update_user": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update user body",
                 "consumes": [
                     "application/json"
@@ -488,6 +570,21 @@
                 }
             }
         },
+        "rest_api_gin_internal_dtos.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "rest_api_gin_internal_dtos.RegisterRoleRequest": {
             "type": "object",
             "required": [
@@ -535,6 +632,14 @@
                 }
             }
         },
+        "rest_api_gin_internal_dtos.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "JWTtoken": {
+                    "type": "string"
+                }
+            }
+        },
         "rest_api_gin_internal_dtos.UpdateRoleRequest": {
             "type": "object",
             "required": [
@@ -562,6 +667,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Provide your access token in the Authorization header using the Bearer scheme.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
